--- a/index.html
+++ b/index.html
@@ -1,35 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="styles.css">
-  <title>Frontend Mentor | Intro component with sign up form</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Frontend Mentor | Intro component with sign up form</title>
+  </head>
+  <body>
+    <main>
+      <div class="container">
+        <div class="left-container">
+          <h1>Learn to code by watching others</h1>
 
-  Learn to code by watching others
+          <p>
+            See how experienced developers solve problems in real-time. Watching
+            scripted tutorials is great, but understanding how developers think
+            is invaluable.
+          </p>
+        </div>
+        <div class="right-container">
+          <button class="promo-button">
+            Try it free 7 days then $20/mo. thereafter
+          </button>
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
+          <form action="">
+            <div class="first-name-contianer">
+              <div class="input-container">
+                <input
+                  type="text"
+                  name="first-name"
+                  id="first-name"
+                  placeholder="First Name"
+                />
+                <img src="./images/icon-error.svg" alt="error icon" />
+              </div>
+              <p class="error-message"></p>
+            </div>
 
-  Try it free 7 days then $20/mo. thereafter
+            <div class="last-name-container">
+              <div class="input-container">
+                <input
+                  type="text"
+                  name="last-name"
+                  id="last-name"
+                  placeholder="Last Name"
+                />
+                <img src="./images/icon-error.svg" alt="error icon" />
+              </div>
+              <p></p>
+              <p></p>
+            </div>
 
-  First Name 
-  Last Name 
-  Email Address
-  Password
+            <div class="email-container">
+              <div class="input-container">
+                <input
+                  type="email"
+                  name="email"
+                  id="email"
+                  placeholder="Email Address"
+                />
+                <img src="./images/icon-error.svg" alt="error icon" />
+              </div>
+              <p></p>
+              <p></p>
+            </div>
 
-  Claim your free trial 
+            <div class="password-container">
+              <div class="input-container">
+                <input
+                  type="password"
+                  name="password"
+                  id="password"
+                  placeholder="Password"
+                />
+                <img src="./images/icon-error.svg" alt="error icon" />
+              </div>
+              <p></p>
+              <p></p>
+            </div>
 
-  By clicking the button, you are agreeing to our Terms and Services
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+            <div class="bottom-container">
+              <button>Claim your free trial</button>
+              <p class="agreement-par">
+                By clicking the button, you are agreeing to our
+                <a href="#" class="terms-service">Terms and Services</a>
+              </p>
+            </div>
+          </form>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <p class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Hazel Dotson & </a>.
+      </p>
+    </footer>
+  </body>
 </html>
