--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Frontend Mentor | Intro component with sign up form</title>
   </head>
   <body>
@@ -27,7 +33,7 @@
         </div>
         <div class="right-container">
           <button class="promo-button">
-            Try it free 7 days then $20/mo. thereafter
+         <b>Try it free 7 days</b>  then $20/mo. thereafter
           </button>
 
           <form action="">
@@ -41,7 +47,7 @@
                 />
                 <img src="./images/icon-error.svg" alt="error icon" />
               </div>
-              <p class="error-message"></p>
+              <p class="error-message first-name-error"></p>
             </div>
 
             <div class="last-name-container">
@@ -54,8 +60,7 @@
                 />
                 <img src="./images/icon-error.svg" alt="error icon" />
               </div>
-              <p></p>
-              <p></p>
+              <p class="error-message last-name-error"></p>
             </div>
 
             <div class="email-container">
@@ -68,8 +73,7 @@
                 />
                 <img src="./images/icon-error.svg" alt="error icon" />
               </div>
-              <p></p>
-              <p></p>
+              <p class="error-message email-error"></p>
             </div>
 
             <div class="password-container">
@@ -82,8 +86,7 @@
                 />
                 <img src="./images/icon-error.svg" alt="error icon" />
               </div>
-              <p></p>
-              <p></p>
+              <p class="error-message first-name-eror"></p>
             </div>
 
             <div class="bottom-container">
